# learn-pytorch

./: .gitignore  README.md  pyproject.toml
notebook/: 1.0-tensor.ipynb  2.0-workflow.ipynb  3.0-classification.ipynb  4.0-image-classification.ipynb  5.0-dataset.ipynb  6.0-transfer-learning.ipynb  7.0-paper-replicating.ipynb  helper_functions.py
